<resources>
    <string name="geo_text">Zihuatanejo, Gro</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="search">Search</string>
    <string name="hot_sales">Hot sales</string>
    <string name="see_more">see more</string>
    <string name="new_string">New</string>
    <string name="best_seller">Best Seller</string>
    <string name="computer">Computer</string>
    <string name="phone">Phone</string>
    <string name="health">Health</string>
    <string name="books">Books</string>
    <string name="unknown">Unknown</string>
    <string name="buy_now">Buy now!</string>
    <string name="profile">Profile</string>
    <string name="favourites">Favourites</string>
    <string name="my_cart">My Cart</string>
    <string name="explorer">Explorer</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
</resources>